[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Weather/Cyclone.png" type="Texture" id=1]
[ext_resource path="res://Art/Weather/Cyclone_1.png" type="Texture" id=2]
[ext_resource path="res://Elements/Weather/Cyclone/Cyclone.gd" type="Script" id=3]
[ext_resource path="res://Art/temp/Area.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[node name="Cyclone" type="Node2D"]
script = ExtResource( 3 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 2 )

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="EffectArea"]
modulate = Color( 0.6, 0.929412, 0.960784, 0.196078 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "1"

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="body_entered" from="EffectArea" to="." method="_on_EffectArea_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_EffectArea_body_exited"]
